--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,10 @@ services:
     tty: true
     volumes:
       - .:/detic-sample/
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: ['gpu']
